# Ymir

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  area.json  default.profraw  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  vessel1.json
adapters/: CMakeLists.txt
adapters/include/ymir/adapters/json/: BodyDefinition.h  Scenario.h  ScenarioReader.h
adapters/src/: adapters.cpp
adapters/src/json/: ScenarioReader.cpp
core/: CMakeLists.txt  CMakeLists.wasm.txt  build-wasm.sh  package.json
core/cmake/: CompilerWarnings.cmake  Dependencies.cmake  Emscripten.cmake  version.h.in
core/examples/body_types/: simple_box.json
core/include/ymir/core/: AbstractBody.h  Body.h  BodyState.h  ForceModel.h  Forces.h  RigidBody6DOF.h  Simulation.h
core/include/ymir/core/integrator/: CvodeConfig.h  CvodeIntegrator.h
core/include/ymir/core/math/: AngleUtils.h  LinearAlgebra.h
core/libs/common/: CMakeLists.txt
core/libs/common/include/ymir/common/: PhysicalConstants.h  Types.h
core/libs/persistence/src/json/: ScenarioReader.cpp
core/libs/physics/: CMakeLists.txt
core/libs/physics/include/ymir/physics/: AbstractBody.h  BodyState.h  ForceModel.h  NavalForceModel.h  RigidBody6DOF.h
core/libs/physics/src/: NavalForceModel.cpp  naval_physics.cpp
core/libs/physics/src/forces/: CurrentForces.cpp  RestoringForces.cpp  RudderForces.cpp  SquatForces.cpp  ThrustForces.cpp  TugForces.cpp
core/libs/simulation/include/ymir/simulation/: NavalDomain.h  Simulation.h
core/libs/simulation/src/: NavalDomain.cpp  Simulation.cpp
core/libs/vessel/: CMakeLists.txt
core/libs/vessel/include/ymir/vessel/: NavalContext.h  Thruster.h  VesselState.h
core/libs/vessel/src/: Rudder.cpp
core/libs/vessel/src/controllers/: ManeuverController.cpp  PrescribedController.cpp
core/libs/vessel/tests/: TestBerthManeuverSystem.cpp  TestDynamicVessel.cpp  TestRudder.cpp  TestThruster.cpp  TestVesselState.cpp
core/libs/world/: CMakeLists.txt
core/libs/world/include/ymir/world/: EnvironmentTimeline.h  World.h  WorldSnapshot.h
core/libs/world/src/: CouplingRegistry.cpp  Environment.cpp  EnvironmentTimeline.cpp  World.cpp
core/libs/world/src/wave/: WaveForces.cpp  WaveSpectrum.cpp
core/src/: Body.cpp  RigidBody6DOF.cpp  Simulation.cpp
core/src/integrator/: CvodeIntegrator.cpp
core/src/wasm/: WaveRaoData.h  YmirBindings.cpp
core/tests/: CMakeLists.txt
core/tests/common/: TestMath.cpp
core/tests/physics/: TestBody.cpp  TestForceModel.cpp  TestIntegratorRK45.cpp
core/tests/physics/forces/: TestCurrentForces.cpp  TestDampingForces.cpp  TestRestoringForces.cpp  TestRudderForces.cpp  TestSquatForces.cpp  TestThrustForces.cpp
core/tests/simulation/: TestActuatorIntegration.cpp  TestNavalDomainCoupling.cpp  TestNavalInfra.cpp  TestNavalIntegration.cpp
core/tests/world/: TestEnvironmentTimeline.cpp  TestIDomain.cpp  TestJsonSmoke.cpp  TestWaveForces.cpp  TestWaveSpectrum.cpp  TestWorld.cpp  TestWorldTimeline.cpp
libs/persistence/: CMakeLists.txt
libs/physics/: CMakeLists.txt
libs/physics/include/ymir/physics/: NavalForceModel.h  RigidBody6DOF.h
libs/physics/include/ymir/physics/forces/: CurrentForces.h  RestoringForces.h  RudderForces.h  ThrustForces.h
libs/physics/src/: RigidBody6DOF.cpp  physics.cpp
libs/physics/src/forces/: CurrentForces.cpp  DampingForces.cpp  InertialForces.cpp  RestoringForces.cpp  RudderForces.cpp  SquatForces.cpp  ThrustForces.cpp  WindForces.cpp
libs/physics/src/integrator/: CvodeIntegrator.cpp  RK45Integrator.cpp
libs/simulation/: CMakeLists.txt
libs/simulation/include/ymir/simulation/: CouplingForceModel.h  NavalDomain.h  NavalSimulation.h
libs/simulation/src/: NavalDomain.cpp  NavalSimulation.cpp
libs/vessel/: CMakeLists.txt
libs/vessel/include/ymir/vessel/: DynamicVessel.h  Rudder.h  VesselConfig.h
libs/vessel/src/: DynamicVessel.cpp  Thruster.cpp
libs/vessel/src/controllers/: BerthManeuverSystem.cpp  TugParametricForces.cpp
libs/vessel/tests/: CMakeLists.txt  TestBerthManeuverSystem.cpp  TestDynamicVessel.cpp  TestManeuverController.cpp  TestPrescribedController.cpp
libs/world/: CMakeLists.txt
libs/world/include/ymir/world/: CouplingRegistry.h  Environment.h  IDomain.h  NavalEnvironment.h
libs/world/src/: CouplingRegistry.cpp  World.cpp
libs/world/src/wave/: WaveComponent.cpp
naval/: CMakeLists.txt
naval/include/ymir/naval/: NavalContext.h  NavalForceModel.h  NavalSimulation.h  VesselConfig.h
naval/include/ymir/naval/forces/: CurrentForces.h  DampingForces.h  InertialForces.h  RestoringForces.h  RudderForces.h  SquatForces.h  ThrustForces.h  TugForces.h  WindForces.h
naval/include/ymir/naval/wave/: WaveForces.h  WaveSpectrum.h
naval/src/: NavalForceModel.cpp  NavalSimulation.cpp  naval.cpp
naval/src/forces/: CurrentForces.cpp  DampingForces.cpp  InertialForces.cpp  RestoringForces.cpp  RudderForces.cpp  SquatForces.cpp  ThrustForces.cpp  TugForces.cpp  WindForces.cpp
naval/src/wave/: WaveForces.cpp  WaveSpectrum.cpp
tests/: CMakeLists.txt  SmokeTest.cpp
tests/adapters/: TestScenarioReader.cpp
tests/core/: TestBody.cpp  TestForceModel.cpp  TestForces.cpp  TestIntegrator.cpp  TestMath.cpp  TestSimulationIntegration.cpp
tests/naval/: TestCurrentForces.cpp  TestDampingForces.cpp  TestInertialForces.cpp  TestNavalInfra.cpp  TestNavalIntegration.cpp  TestRestoringForces.cpp  TestRudderForces.cpp  TestSquatForces.cpp  TestThrustForces.cpp  TestTugForces.cpp  TestWaveForces.cpp  TestWaveSpectrum.cpp  TestWindForces.cpp
tests/persistence/: TestScenarioReader.cpp
tests/physics/: TestForces.cpp  TestIntegrator.cpp
tests/physics/forces/: TestInertialForces.cpp  TestRudderForces.cpp  TestSquatForces.cpp  TestThrustForces.cpp  TestTugForces.cpp  TestWindForces.cpp
tests/simulation/: TestCouplingForceModel.cpp  TestNavalDomain.cpp  TestNavalInfra.cpp  TestNavalIntegration.cpp  TestSimulationIntegration.cpp  TestVesselIntegration.cpp
tests/world/: TestCouplingRegistry.cpp  TestEnvironment.cpp  TestWaveForces.cpp
(+331 files in other folders)
